--- a/gateway-service-zuul/gateway-service-zuul-eureka/src/main/resources/application.properties
+++ b/gateway-service-zuul/gateway-service-zuul-eureka/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=gateway-service-zuul
-server.port=8888
+server.port=8889
 
 zuul.routes.producer.path=/producer/**
 zuul.routes.producer.serviceId=spring-cloud-producer
+zuul.routes.producer.strip-prefix=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
