--- a/hystrix-dashboard-turbine/spring-cloud-consumer-hystrix-dashboard/pom.xml
+++ b/hystrix-dashboard-turbine/spring-cloud-consumer-hystrix-dashboard/pom.xml
@@ -9,7 +9,9 @@
 	<packaging>jar</packaging>
 
 	<name>spring-cloud-consumer-hystrix-dashboard</name>
-	<description>Demo project for Spring cloud consumer hystrix dashboard</description>
+	<description>Demo project for Spring cloud consumer hystrix dashboard
+		test: http://localhost:8001/hystrix.stream
+	</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
