--- a/spring-boot-admin-eureka/spring-boot-admin-server/src/main/resources/application.yml
+++ b/spring-boot-admin-eureka/spring-boot-admin-server/src/main/resources/application.yml
@@ -3,23 +3,23 @@ server:
 spring:
   application:
     name: admin-server
-  mail:
-    host: smtp.qq.com
-    username: xxx@qq.com
-    password: xxx
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
-  boot:
-    admin:
-      notify:
-        mail:
-          from: xxx@qq.com
-          to: xxxx@qq.com
+#  mail:
+#    host: smtp.qq.com
+#    username: xxx@qq.com
+#    password: xxx
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
+#            required: true
+#  boot:
+#    admin:
+#      notify:
+#        mail:
+#          from: xxx@qq.com
+#          to: xxxx@qq.com
 # http://codecentric.github.io/spring-boot-admin/1.5.6/#mail-notifications
 eureka:
   instance:
