--- a/spring-cloud-config-eureka/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-eureka/spring-cloud-config-server/src/main/resources/application.yml
@@ -7,10 +7,11 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/ityouknow/spring-cloud-starter/     # 配置git仓库的地址
+          uri: https://github.com/independenter/spring-cloud-examples/     # 配置git仓库的地址
           search-paths: config-repo                             # git仓库地址下的相对地址，可以配置多个，用,分割。
-          username: yourname                                        # git仓库的账号
-          password: yourpass                                    # git仓库的密码
+          username: independenter                                        # git仓库的账号
+          password: donghui@1                                    # git仓库的密码
+
 eureka:
   client:
     serviceUrl:
