--- a/spring-cloud-consul/spring-cloud-consul-producer-2/src/main/resources/application.properties
+++ b/spring-cloud-consul/spring-cloud-consul-producer-2/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.application.name=spring-cloud-consul-producer
-server.port=8502
+spring.application.name=service-producer
+server.port=8512
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 #\u6CE8\u518C\u5230consul\u7684\u670D\u52A1\u540D\u79F0
 spring.cloud.consul.discovery.serviceName=service-producer
+spring.cloud.consul.discovery.health-check-path=/actuator/health
+spring.cloud.consul.discovery.health-check-interval=15s
+spring.cloud.consul.discovery.heartbeat.enabled=true
+spring.cloud.consul.discovery.tags[0]=version=1.0
+spring.cloud.consul.discovery.tags[1]=author=dob
+
+# 加载所有的端点/默认只加载了 info / health
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
